# sql-splitter

./: .gitignore  README_PRODUCT.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  SECURITY_README.md  SECURITY_VERIFICATION_REPORT.md  SKILL.md  landing.html  pyproject.toml  requirements.txt
references/: dm-converter-design.md  dm-converter-v243-fixes.md  dm-converter-v245-bracket-dbo-split.md  dm-converter-v246-fixes.md  dm-converter-v251-fixes.md  dm-converter-v30-fixes.md  dm-converter-v322-fixes.md  dm-converter-v323-fixes.md  dm-converter-v330-fixes.md  dm-converter-v340-fixes.md  dm-converter-v345-fixes.md  dm-converter-v353-fixes.md  dm_conversion.py  hrbi-stage-real-world-test.md  python-indentation-debugging.md  split-convert-workflow-20260627.md  sql-splitter-commercialization.md  sql-splitter-productization.md  sql-splitter-v350-productization.md
scripts/: batch_convert.py  checkpoint.py  dm_converter.py  gui.py  license_checker.py  report_generator.py  split_sql.py  split_sql_v21.py  split_sql_v22.py  test_dm_converter.py  test_json_security.py  test_report_generator.py  unlimited_split.py
src/sql_splitter/: __init__.py  cli.py
