[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-splitter"
version = "3.5.0"
description = "SQL Server→达梦数据库 一键迁移工具 | 拆分SQL文件 + 自动语法转换 + 质量报告"
readme = "README_PRODUCT.md"
license = {text = "MIT-0"}
requires-python = ">=3.9"
authors = [
    {name = "fish1981bimmer"},
]
keywords = ["sql", "splitter", "dm", "dameng", "sqlserver", "migration", "converter", "etl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sql-splitter = "sql_splitter.cli:main"

[project.optional-dependencies]
gui = ["tkinter"]
report = []
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/fish1981bimmer/sql-splitter"
Repository = "https://github.com/fish1981bimmer/sql-splitter"
Documentation = "https://github.com/fish1981bimmer/sql-splitter#readme"
